Updated some build plugins (#5516)
Updated Maven plugins to newer versions. The
Modernizer plugin caused the build to fail in a
lot of places where it recommended using
`Path.of` instead of `new File()` and `Paths.get`.
It also recommended using `Files.new*Stream`
instead of `new FileReader()` or other file
input/output streams.